2015-10-12  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* osp/osp.c (osp_start_scan): Fix build in release mode.

2015-10-07  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/network.c (read_stream_connection_unbuffered): Don't return early
	when minimal length is not set.

2015-10-07  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/network.c (read_stream_connection_unbuffered): Fix erroneous
	gnutls_record_recv() return value handling, which caused early return
	even when not all data was received.

2015-10-06  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_networking.c (ipv6_is_enabled): New function.

	* base/openvas_networking.h: Add function prototype.

2015-10-06  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* osp/osp.c (osp_get_scan): Fix return values. Add function
	documentation.
	(osp_stop_scan): New function.
	(osp_start_scan): Add scan_id parameter. Remove result parameter.

	* osp/osp.h: Add and modify function prototypes.

2015-10-05  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* omp/omp.c (omp_create_lsc_credential, omp_create_lsc_credential_key)
	(omp_create_lsc_credential_ext, omp_delete_lsc_credential_ext): Change
	OMP commands "create_lsc_credential" and "delete_lsc_credential"
	to "create_credential" and "delete_credential".

2015-09-18  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/exec.c (exec_nasl_script): Exit forked processes instead of
	returning.

2015-09-14  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvticache.c (nvticache_reset): Null check cache_kb instead of
	asserting, as this function may be called from openvas-nasl.

2015-08-31  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_socket.c (get_udp_data): Create udp_data hash table if not
	found.

2015-08-28  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_networking.c (openvas_ssh_pkcs8_decrypt)
	(openvas_ssh_public_from_private): Move functions to misc/openvas_ssh.c
