@@ -370,7 +370,7 @@ option_concat_as_xml (gpointer key, gpointer value, gpointer pstr)
  */
 int
 osp_start_scan (osp_connection_t *connection, const char *target,
-                GHashTable *options, const char *scan_id)
+                const char *ports, GHashTable *options, const char *scan_id)
 {
   entity_t entity;
   char *options_str = NULL;
@@ -385,9 +385,9 @@ osp_start_scan (osp_connection_t *connection, const char *target,
     g_hash_table_foreach (options, option_concat_as_xml, &options_str);
 
   rc = osp_send_command (connection, &entity,
-                         "<start_scan target='%s' scan_id='%s'>"
+                         "<start_scan target='%s' ports='%s' scan_id='%s'>"
                          "<scanner_params>%s</scanner_params></start_scan>",
-                         target, scan_id ?: "", options_str ?: "");
+                         target, ports ?: "", scan_id ?: "", options_str ?: "");
   g_free (options_str);
   if (rc)
     return -1;
